# list-data-structures

./: .gitignore  CMakeLists.txt  README.md  main.cpp
errors/: PostfixEvaluatorErrors.h  PrefixEvaluatorErrors.h
include/: Color.h  LinkedList.h  PostfixEvaluator.h  PrefixEvaluator.h  Stack.h  StackArray.h  StackList.h
src/: TestLinkedList.cpp  TestLinkedList.h  TestPostfixEvaluator.cpp  TestPostfixEvaluator.h  TestPrefixEvaluator.cpp  TestPrefixEvaluator.h  TestStack.cpp  TestStack.h
tests/: LinkedListTest.h  PostfixEvaluatorTest.h  PrefixEvaluatorTest.h  StackTest.h
